Редизайн формы авторизации

--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -72,6 +72,10 @@ nav.navbar {
     padding: 20px;
 }
 
+.sign-form * {
+    font-size: 14px;
+}
+
 .meme {
     background-color: white;
     margin: 2rem auto;
