--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -254,3 +254,9 @@ textarea {
     margin-left: auto;
     margin-right: auto;
 }
+
+.ui.button {
+    font-family: 'Roboto Slab', serif;
+    font-weight: normal;
+    font-size: 14px;
+}
