Добавить !important к размеру кнопок

--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -258,5 +258,5 @@ textarea {
 .ui.button {
     font-family: 'Roboto Slab', serif;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 14px !important;
 }
