Использовать кнопки Semantic UI где это возможно

--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -76,7 +76,7 @@
                     </p>
 
                     <div class="form-group">
-                        <input class="btn btn-primary col-xs-12" type="submit" value="Зарегистрироваться"/>
+                        <input class="fluid ui primary button" type="submit" value="Зарегистрироваться"/>
                     </div>
 
                 </div>
