--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -36,7 +36,7 @@
                             <div class="input-group">
                                 <select name="university" id="id_university"></select>
                                 <div class="input-group-btn">
-                                    <a href="{% url 'new_university' %}" class="btn btn-primary ">
+                                    <a href="{% url 'new_university' %}" class="ui primary button">
                                         <span class="showopacity glyphicon glyphicon-plus"></span>
                                     </a>
                                 </div>
@@ -48,7 +48,7 @@
                             <div class="input-group">
                                 <select name="department" id="id_department"></select>
                                 <div class="input-group-btn">
-                                    <a href="{% url 'new_department' %}" class="btn btn-primary ">
+                                    <a href="{% url 'new_department' %}" class="ui primary button">
                                         <span class="showopacity glyphicon glyphicon-plus"></span>
                                     </a>
                                 </div>
@@ -60,7 +60,7 @@
                             <div class="input-group">
                                 <select name="chair" id="id_chair"></select>
                                 <div class="input-group-btn">
-                                    <a href="{% url 'new_chair' %}" class="btn btn-primary ">
+                                    <a href="{% url 'new_chair' %}" class="ui primary button">
                                         <span class="showopacity glyphicon glyphicon-plus"></span>
                                     </a>
                                 </div>
@@ -72,7 +72,7 @@
                             <div class="input-group">
                                 <select name="program" id="id_program"></select>
                                 <div class="input-group-btn">
-                                    <a href="{% url 'new_program' %}" class="btn btn-primary ">
+                                    <a href="{% url 'new_program' %}" class="ui primary button">
                                         <span class="showopacity glyphicon glyphicon-plus"></span>
                                     </a>
                                 </div>
@@ -87,7 +87,7 @@
                         <div class="input-group">
                             {{ form.subject }}
                             <div class="input-group-btn">
-                                <a href="{% url 'new_subject' %}" class="btn btn-primary ">
+                                <a href="{% url 'new_subject' %}" class="ui primary button">
                                     <span class="showopacity glyphicon glyphicon-plus"></span>
                                 </a>
                             </div>
