--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -21,7 +21,7 @@
         <span class="close">&times;</span>
         {# Загружает GIF-изображение размером 1×1 пиксел. #}
         <img class="modal-content" id="modalImg" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=">
-        <a id="show-full-btn" href="#" target="_blank" class="btn btn-primary">
+        <a id="show-full-btn" href="#" target="_blank" class="ui primary button">
             Открыть оригинал в новой вкладке
         </a>
     </div>
