--- a/cloud/templates/moderation/structure/structure_template.html
+++ b/cloud/templates/moderation/structure/structure_template.html
@@ -5,12 +5,12 @@
             <hr/>
             <nav class="post-moderation btn-group">
                 <a href="{% block approve_url %}{% endblock %}"
-                   class="btn btn-success">
+                   class="ui positive button">
                     <span class="showopacity glyphicon glyphicon-ok"></span>
                     Одобрить
                 </a>
                 <a href="{% block delete_url %}{% endblock %}"
-                   class="btn btn-danger"
+                   class="ui negative button"
                    title="Удалить"
                    aria-label="Удалить">
                     <span class="showopacity glyphicon glyphicon-trash"></span>
