--- a/cloud/templates/registration/password_reset_form.html
+++ b/cloud/templates/registration/password_reset_form.html
@@ -9,7 +9,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <hr>
-            <button class="btn btn-default" type="submit" style="width: 100%">
+            <button class="ui button" type="submit" style="width: 100%">
                 Отправить
             </button>
         </form>
