--- a/cloud/templates/user.html
+++ b/cloud/templates/user.html
@@ -83,7 +83,7 @@
             </div>
 
             <a href="{% url 'user_posts' user_id=fr_user.pk %}">
-                <div class="btn btn-primary full-width">Все публикации {{ fr_user.username }}</div>
+                <div class="fluid ui primary button">Все публикации {{ fr_user.username }}</div>
             </a>
 
         </div>
