--- a/cloud/templates/contacts.html
+++ b/cloud/templates/contacts.html
@@ -10,9 +10,8 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="btn btn-default" style="width: 100%">Отправить</button>
+            <button type="submit" class="fluid ui button">Отправить</button>
         </form>
     </div>
-
 
 {% endblock %}
