--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -84,12 +84,12 @@
 
                 <div class="container-fluid">
                     <a href="{% url 'user_posts' user_id=user.pk %}">
-                        <div class="btn btn-primary full-width" style="margin-bottom: 10px">Все проверенные
+                        <div class="fluid ui primary button" style="margin-bottom: 10px">Все проверенные
                             публикации
                         </div>
                     </a>
                     <a href="{% url 'user_not_checked_posts' user_id=user.pk %}">
-                        <div class="btn btn-warning full-width">Записи на&nbsp;модерации</div>
+                        <div class="fluid ui orange button">Записи на&nbsp;модерации</div>
                     </a>
                 </div>
                 <hr>
@@ -144,7 +144,7 @@
                                     {{ change_user_form.last_name }}
                                 </div>
 
-                                <button class="btn btn-primary full-width" type="submit">Сохранить данные</button>
+                                <button class="fluid ui primary button" type="submit">Сохранить данные</button>
 
                             </form>
                         </div>
@@ -158,7 +158,7 @@
                                     {{ change_avatar_form.avatar }}
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                    <button class="btn btn-primary" type="submit" style="width: 100%">Сохранить
+                                    <button class="ui primary button" type="submit" style="width: 100%">Сохранить
                                     </button>
                                 </div>
                             </form>
@@ -191,7 +191,7 @@
                                     </tr>
                                 </table>
 
-                                <button class="btn btn-primary full-width" type="submit">Изменить пароль</button>
+                                <button class="fluid ui primary button" type="submit">Изменить пароль</button>
                                 <hr>
 
                             </form>
@@ -212,7 +212,7 @@
                                     <div class="input-group">
                                         <select name="university" id="id_university"></select>
                                         <div class="input-group-btn">
-                                            <a href="{% url 'new_university' %}" class="btn btn-primary ">
+                                            <a href="{% url 'new_university' %}" class="ui primary button">
                                                 <span class="showopacity glyphicon glyphicon-plus"></span>
                                             </a>
                                         </div>
@@ -224,7 +224,7 @@
                                     <div class="input-group">
                                         <select name="department" id="id_department"></select>
                                         <div class="input-group-btn">
-                                            <a href="{% url 'new_department' %}" class="btn btn-primary ">
+                                            <a href="{% url 'new_department' %}" class="ui primary button">
                                                 <span class="showopacity glyphicon glyphicon-plus"></span>
                                             </a>
                                         </div>
@@ -236,7 +236,7 @@
                                     <div class="input-group">
                                         <select name="chair" id="id_chair"></select>
                                         <div class="input-group-btn">
-                                            <a href="{% url 'new_chair' %}" class="btn btn-primary ">
+                                            <a href="{% url 'new_chair' %}" class="ui primary button">
                                                 <span class="showopacity glyphicon glyphicon-plus"></span>
                                             </a>
                                         </div>
@@ -248,7 +248,7 @@
                                     <div class="input-group">
                                         {{ change_user_info_form.program }}
                                         <div class="input-group-btn">
-                                            <a href="{% url 'new_program' %}" class="btn btn-primary ">
+                                            <a href="{% url 'new_program' %}" class="ui primary button">
                                                 <span class="showopacity glyphicon glyphicon-plus"></span>
                                             </a>
                                         </div>
@@ -262,7 +262,7 @@
                                     {{ change_user_info_form.course }}
                                 </div>
 
-                                <button class="btn btn-primary full-width" type="submit">Сохранить данные</button>
+                                <button class="fluid ui primary button" type="submit">Сохранить данные</button>
                                 <hr>
 
                             </div>
@@ -279,12 +279,12 @@
                             <p>Привязан <a href="https://vk.com/id{{ user_info.vk_id }}">профиль VK</a>
                                 с&nbsp;ID {{ user_info.vk_id }}.</p>
                             <a href="{% url "del_vk_id" %}">
-                                <div class="btn btn-danger">Отвязать аккаунт VK</div>
+                                <div class="negative ui button">Отвязать аккаунт VK</div>
                             </a>
                         {% else %}
                             <a href="{{ vk_auth_link }}">
                                 {% comment %}<i class="fa fa-vk fa-2x"></i>{% endcomment %}
-                                <div class="btn btn-default">Привязать аккаунт VK</div>
+                                <div class="ui button">Привязать аккаунт VK</div>
                             </a>
                         {% endif %}
 
@@ -292,7 +292,7 @@
 
                         <a href="{% url 'account_delete_active' %}"
                            onclick="return confirm('Удалить аккаунт? После этого действия его невозможно будет восстановить.')">
-                            <div class="btn btn-danger">Удалить мой аккаунт PiCloud</div>
+                            <div class="negative ui button">Удалить мой аккаунт PiCloud</div>
                         </a>
                         <hr>
 
