--- a/cloud/templates/structure/new/subject.html
+++ b/cloud/templates/structure/new/subject.html
@@ -32,7 +32,7 @@
         </div>
 
         <hr>
-        <button type="submit" class="btn btn-default" style="width: 100%">Отправить на модерацию
+        <button type="submit" class="ui button" style="width: 100%">Отправить на модерацию
         </button>
     </form>
 
