Отображать всплывающую подсказку над числом просмотров

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -100,8 +100,8 @@
                         <span class="showopacity glyphicon glyphicon-pencil"></span>
                     </a>
                 {% endif %}
-                <span class="ui" style="color: #999999">
-                    <i class="eye icon" title="Число просмотров"></i>{{ post.views }}
+                <span class="ui" style="color: #999999" title="Число просмотров">
+                    <i class="eye icon"></i>{{ post.views }}
                 </span>
                 {% if post.get_comment_count != 0 %}
                     <a href="{% url 'post_detail' pk=post.pk %}" class="comments-counter">
