--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -15,6 +15,15 @@
         gtag('config', 'UA-121790055-1');
     </script>
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8915976864571228",
+            enable_page_level_ads: true
+        });
+    </script>
+
 
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
