Implement auth with google

--- a/cloud/templates/auth/signin.html
+++ b/cloud/templates/auth/signin.html
@@ -51,7 +51,14 @@
 
             <div class="ui buttons">
                 <input class="ui button" style="font-size: 20px;" type="submit" value="Войти"/>
-                <a href="{{ vk_auth_link }}" style="font-size: 20px;" class="ui vk icon button"><i class="vk icon"></i></a>
+                <a class="ui vk icon button" title="Sign in with Google" style="font-size: 20px;"
+                   href="{{ vk_auth_link }}">
+                    <i class="vk icon"></i>
+                </a>
+                <a class="ui google plus icon button" title="Sign in with Google" style="font-size: 20px;"
+                   href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.GET.next|urlencode }}">
+                    <i class="google icon"></i>
+                </a>
             </div>
 
             <hr>
