[website] Implement 'random_id' method; add 'DataTable' lib

--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -60,10 +60,17 @@
 <!-- Semantic UI -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
+<!-- Data Table library -->
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+
 <!-- Bootstrap JS -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
+
+<!-- Global methods -->
+<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
 {% block js %}
 {% endblock %}
