--- a/website/templates/main_navbar.html
+++ b/website/templates/main_navbar.html
@@ -33,10 +33,9 @@
                 {% endif %}
 
                 <li>
-                    <a href="{% url 'feed' %}">
-                        Облако
-                        <i style="font-size: 16px; color: #45668e;"
-                           class="pull-right hidden-xs showopacity fas fa-cloud"></i>
+                    <a href="{% url 'cloud' %}">
+                        Cloud
+                        <i style="font-size: 16px; color: #45668e;" class="pull-right hidden-xs showopacity fas fa-cloud"></i>
                     </a>
                 </li>
 
@@ -49,14 +48,6 @@
                         </a>
                     </li>
                 {% endif %}
-
-                <li>
-                    <a href="{% url 'post_new' %}">
-                        Запостить
-                        <i style="font-size: 16px;"
-                           class="pull-right hidden-xs showopacity fas fa-pen-fancy"></i>
-                    </a>
-                </li>
 
 
                 <li>
