Remove registration and auth by password

--- a/cloud/templates/structure/students_from_university.html
+++ b/cloud/templates/structure/students_from_university.html
@@ -37,7 +37,7 @@
                     Вы можете стать первым и рассказать о нас однокурсникам!
                 </p>
                 <p>
-                    <a href="{% url 'signup' %}">Зарегистрироваться</a>.
+                    <a href="{% url 'signin' %}">Войти в систему</a>.
                 </p>
             </div>
         {% endfor %}
