[website] Refactor main menu

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -146,24 +146,6 @@
         </div>
     </div>
 
-    <h2>Университеты</h2>
-    <ul class="universities">
-        <li>
-            <a href="https://ifmo.ru" target="_blank">
-                <img src="{% static 'img/universities/itmo.png' %}"
-                     title="Университет ИТМО, Санкт-Петербург"
-                     alt="Университет ИТМО">
-            </a>
-        </li>
-        <li>
-            <a href="https://guu.ru" target="_blank">
-                <img src="{% static 'img/universities/guu.png' %}"
-                     title="Государственный университет управления, Москва"
-                     alt="Государственный университет управления">
-            </a>
-        </li>
-    </ul>
-
     <div class="heroes">
         <p class="hero">&pi;Cloud&nbsp;— лучше, чем файлообменник.</p>
         <p class="heroine">И&nbsp;гораздо лучше, чем сайт кафедры.</p>
@@ -182,34 +164,7 @@
     </p>
 </footer>
 
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-    (function (d, w, c) {
-        (w[c] = w[c] || []).push(function() {
-            try {
-                w.yaCounter47614906 = new Ya.Metrika({
-                    id:47614906,
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true
-                });
-            } catch(e) { }
-        });
-
-        var n = d.getElementsByTagName("script")[0],
-            s = d.createElement("script"),
-            f = function () { n.parentNode.insertBefore(s, n); };
-        s.type = "text/javascript";
-        s.async = true;
-        s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-        if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-        } else { f(); }
-    })(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/47614906" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+{% include 'tags/yandex_metrika.html' %}
 
 </body>
 </html>
