[website] Add basic hierarchy page

--- a/website/templates/main_navbar.html
+++ b/website/templates/main_navbar.html
@@ -40,7 +40,7 @@
                 </li>
 
                 <li>
-                    <a href="{% url 'universities_list' %}">
+                    <a href="{% url 'departments' %}">
                         Departments
                         <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-university"></i> </a>
                 </li>
