--- a/website/templates/departments.html
+++ b/website/templates/departments.html
@@ -16,7 +16,7 @@
 
     <div class="ui padded grid">
         <div class="no-margin-padding column">
-            <div class="ui segment" id="search_container" style="height: 70px; text-align: left;">
+            <div class="ui segment" id="search_container" style="height: 72px; text-align: left;">
                 <div class="ui loading search">
                     <div class="ui input">
                         <input class="prompt" id="search" type="text" placeholder="Enter search query"
@@ -25,9 +25,12 @@
                     <div class="search results"></div>
                 </div>
             </div>
+            <div class="ui segment" id="breadcrumbs_container"
+                 style="height: 71px; text-align: left; margin-top: -15px;">
+            </div>
 
             <div id="modal"></div>
-            <div class="ui massive middle aligned divided animated list"
+            <div class="ui divided relaxed items"
                  id="departments_container"
                  style="margin: 40px; text-align: left">
             </div>
