[website] Refactor 'Sign In' page

--- a/website/templates/sign_in.html
+++ b/website/templates/sign_in.html
@@ -11,26 +11,26 @@
 
 {% block content %}
 
-    {% if msg %}
-        <div class="ui icon message" role="alert">
-            <i class="sign-in icon"></i>
-            <div class="content">
-                {{ msg }}
-            </div>
+    <div class="ui centered padded grid">
+        <div class="ui segment" style="width: 500px; padding: 40px; margin-top: 200px">
+            <img src="{% static 'img/piLogo.png' %}" alt="PiCloud" style="width: 300px">
+            <hr>
+            <a class="ui google fluid button" title="Sign in with Google" style="font-size: 20px;"
+               href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.GET.next|urlencode }}">
+                <i class="google icon"></i> Google
+            </a>
+            <hr>
+            <a class="ui vk fluid button" title="Sign in with VK" style="font-size: 20px;"
+               href="{% url 'social:begin' 'vk-oauth2' %}?next={{ request.GET.next|urlencode }}">
+                <i class="vk icon"></i> Vkontakte
+            </a>
+            <hr>
+            <a class="ui fluid button" title="Sign in with GitHub"
+               style="font-size: 20px; background-color: #23292d; color: #fff"
+               href="{% url 'social:begin' 'github' %}?next={{ request.GET.next|urlencode }}">
+                <i class="github icon" style="color: #ffffff; text-decoration-color: #bbbbbb"></i> GitHub
+            </a>
         </div>
-    {% endif %}
-
-        <a class="ui vk button" title="Sign in with VK" style="font-size: 20px;"
-           href="{% url 'social:begin' 'vk-oauth2' %}?next={{ request.GET.next|urlencode }}">
-            <i class="vk icon"></i> Vkontakte
-        </a>
-        <a class="ui google plus button" title="Sign in with Google" style="font-size: 20px;"
-           href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.GET.next|urlencode }}">
-            <i class="google icon"></i> Google
-        </a>
-        <a class="ui button" title="Sign in with GitHub" style="font-size: 20px; background-color: #23292d"
-           href="{% url 'social:begin' 'github' %}?next={{ request.GET.next|urlencode }}">
-            <i class="github icon" style="color: #ffffff; text-decoration-color: #bbbbbb"></i> GitHub
-        </a>
+    </div>
 
 {% endblock %}
