[website][cloud] Add loader

--- a/website/templates/cloud.html
+++ b/website/templates/cloud.html
@@ -32,7 +32,8 @@
             </div>
 
             <div id="modal"></div>
-            <div id="posts_container"></div>
+            <div id="posts_container"  class="ui basic segment no-margin-padding"
+                 style="min-height: 100px"></div>
         </div>
     </div>
 
