[website][posts] Re-implement masonry layout for posts
This commit addresses the issue #9.

--- a/website/static/cloud/css/post.css
+++ b/website/static/cloud/css/post.css
@@ -114,3 +114,8 @@ article.post .btn-follow-link, article.post .btn-download {
 .comments-counter {
     text-decoration: none !important;
 }
+
+.post-size-reference,
+.post {
+    width: 500px;
+}
