--- a/website/templates/cloud.html
+++ b/website/templates/cloud.html
@@ -32,8 +32,10 @@
             </div>
 
             <div id="modal"></div>
-            <div id="posts_container"  class="ui basic segment no-margin-padding"
-                 style="min-height: 100px"></div>
+            <div id="posts_container" class="ui basic segment"
+                 style="min-height: 100px; margin-left: auto; margin-right: auto;">
+                <div class="post-size-reference" aria-hidden="true"></div>
+            </div>
         </div>
     </div>
 
@@ -51,4 +53,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/search.min.js"
             integrity="sha256-gkqnhj5TvM/vwvHKAb4zBC7uL6mndcAlK6CEv5iEUwg=" crossorigin="anonymous"></script>
 
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+
+    <script>
+        const grid = document.querySelector('#posts_container');
+        const masonry = new Masonry(grid, {
+            itemSelector: ".post",
+            columnWidth: ".post-size-reference",
+            gutter: 20,
+            fitWidth: true,
+        });
+    </script>
 {% endblock %}
