--- a/website/templates/cloud.html
+++ b/website/templates/cloud.html
@@ -21,7 +21,7 @@
 
     <div class="ui padded grid">
         <div class="no-margin-padding column">
-            <div class="ui segment" id="search_container" style="height: 70px; text-align: left;">
+            <div class="ui segment" id="search_container" style="height: 70px; margin-bottom: 0; text-align: left;">
                 <div class="ui loading search">
                     <div class="ui input">
                         <input class="prompt" id="search" type="text" placeholder="Enter search query"
@@ -32,8 +32,9 @@
             </div>
 
             <div id="modal"></div>
-            <div id="posts_container" class="ui basic segment"
-                 style="min-height: 100px; margin-left: auto; margin-right: auto;">
+            <div class="ui basic segment" style="min-height: 100px; margin-top: 0;">
+                <div id="posts_container">
+                </div>
             </div>
         </div>
     </div>
