--- a/website/templates/main_navbar.html
+++ b/website/templates/main_navbar.html
@@ -5,7 +5,7 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-sidebar-navbar-collapse-1">
-                <span class="sr-only">Показать или скрыть навигацию</span>
+                <span class="sr-only">Display/Hide navbar</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -34,15 +34,20 @@
 
                 <li>
                     <a href="{% url 'cloud' %}">
-                        Cloud
-                        <i style="font-size: 16px; color: #45668e;" class="pull-right hidden-xs showopacity fas fa-cloud"></i>
+                        Cloud <i style="font-size: 16px; color: #45668e;" class="pull-right hidden-xs showopacity fas fa-cloud"></i>
                     </a>
                 </li>
 
                 <li>
                     <a href="{% url 'departments' %}">
-                        Departments
-                        <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-university"></i> </a>
+                        Departments <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-university"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'students' %}">
+                        Students <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-users"></i>
+                    </a>
                 </li>
 
 
@@ -59,7 +64,8 @@
                     <li style="background-color: #F4FF81">
                         <a href="{% url 'moderation' %}">
                             Moderation
-                            <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-hammer"></i> </a>
+                            <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-hammer"></i>
+                        </a>
                     </li>
                 {% endif %}
 
