[website][students] Add paging

--- a/website/templates/students.html
+++ b/website/templates/students.html
@@ -17,7 +17,8 @@
 
     <div class="ui padded centered grid">
         <div class="eight wide column">
-            <div class="ui basic segment divided items" id="students_container" style="min-height: 100px"></div>
+            <div class="ui basic segment divided items" id="students_container"></div>
+            <div class="ui centered button" id="load_button" onclick="load_students()">Load more</div>
         </div>
     </div>
 
