[website] Add 'alerts'

--- a/website/templates/main_template.html
+++ b/website/templates/main_template.html
@@ -30,6 +30,10 @@
 
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu.css' %}">
+
+    <!-- Semantic UI alerts -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/ui-alerts.css' %}">
+
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700,700i|Alegreya:400,400i,500,500i,700,700i|Roboto+Slab:400,700|Roboto:400,400i,500,500i,700,700i&amp;subset=cyrillic">
 
@@ -71,6 +75,7 @@
 
 <!-- Global methods -->
 <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/ui-alerts.js' %}"></script>
 
 {% block js %}
 {% endblock %}
